changes in build wireframe

--- a/index.html
+++ b/index.html
@@ -17,43 +17,69 @@
 
         <section>
             BIO
-            <h2 class="w3-center">Thinkful Beginner</h2>
-            <p class="w3-large">I am a student web developer. I continue to learn,daily,
-                on how to be productive in this type of field. I have accomplished and completed many projects such as
-                a quiz app, bookmark app, and creating my first web page.
-                My education and experiences are completely different than those of
-                a software developer. I have an Associates Degree from Univesity of Pheonix in Criminal
-                Justice and I worked 15 years in law enforcement.
+            <h2 class="w3-center">Lorem ispus</h2>
+            <p class="w3-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mattis orci ex, quis
+                aliquam orci aliquet ac. Mauris mi nunc, euismod id nisl nec, elementum condimentum sem. Suspendisse
+                potenti. Suspendisse vulputate, justo in vestibulum pretium, orci tortor dapibus sapien, luctus dapibus
+                justo ex id turpis. Nulla lobortis justo ac odio bibendum, suscipit pulvinar nisi porta. Etiam euismod
+                nisl nunc, eu ornare lectus bibendum ac. Class aptent taciti sociosqu ad litora torquent per conubia
+                nostra, per inceptos himenaeos. Maecenas rutrum tellus risus, bibendum molestie ex fringilla sed. Cras
+                at ultrices mi, nec venenatis ligula. Nam sed congue erat. Duis dignissim at metus sit amet laoreet.
+                Curabitur sagittis dolor a dui congue, at consequat neque viverra. Maecenas porttitor risus ut elementum
+                elementum. Nunc rutrum cursus nisl, vitae varius urna consectetur elementum. Integer vestibulum dui eget
+                magna consectetur, a sagittis orci varius. Phasellus sollicitudin
+                tellus vel nulla condimentum, eu cursus diam vulputate
             </p>
-            <p class="w3-large"> My health and lifestyle has placed me in a position to change my career and my path
-                for success <span class="w3-tag w3-light-grey">(besides two glasses of mimosa</span>and a tylenol).
-                My investments in laptops , desktops ,tablets, and ipads causes me to have an obsession in exploring
-                the
-                fundementals of web development. I am always finding creative ways to designs web pages.
+            <p class="w3-large"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mattis orci ex, quis
+                aliquam orci aliquet ac. Mauris mi nunc, euismod id nisl nec, elementum condimentum sem. Suspendisse
+                potenti. Suspendisse vulputate, justo in vestibulum pretium, orci tortor dapibus sapien, luctus dapibus
+                justo ex id turpis. Nulla lobortis justo ac odio bibendum, suscipit pulvinar nisi porta. Etiam euismod
+                nisl nunc, eu ornare lectus bibendum ac. Class aptent taciti sociosqu ad litora torquent per conubia
+                nostra, per inceptos himenaeos. Maecenas rutrum tellus risus, bibendum molestie ex fringilla sed. Cras
+                at ultrices mi, nec venenatis ligula. Nam sed congue erat. Duis dignissim at metus sit amet laoreet.
+                Curabitur sagittis dolor a dui congue, at consequat neque viverra. Maecenas porttitor risus ut elementum
+                elementum. Nunc rutrum cursus nisl, vitae varius urna consectetur elementum. Integer vestibulum dui eget
+                magna consectetur, a sagittis orci varius. Phasellus
+                sollicitudin tellus vel nulla condimentum, eu cursus diam vulputate <span
+                    class="w3-tag w3-light-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mattis
+                    orci ex, quis aliquam orci aliquet ac. Mauris mi nunc, euismod id nisl nec, elementum condimentum
+                    sem. Suspendisse potenti. Suspendisse vulputate, justo in vestibulum pretium, orci tortor dapibus
+                    sapien, luctus dapibus justo ex id turpis. Nulla lobortis justo ac odio bibendum, suscipit pulvinar
+                    nisi porta. Etiam euismod nisl nunc, eu ornare lectus bibendum ac. Class aptent taciti sociosqu ad
+                    litora torquent per conubia nostra, per inceptos himenaeos. Maecenas rutrum tellus risus, bibendum
+                    molestie ex fringilla sed. Cras at ultrices mi, nec venenatis ligula. Nam sed congue erat. Duis
+                    dignissim at metus sit amet laoreet. Curabitur sagittis dolor a dui congue, at consequat neque
+                    viverra. Maecenas porttitor risus ut elementum elementum. Nunc rutrum cursus nisl, vitae varius urna
+                    consectetur elementum. Integer vestibulum dui eget magna consectetur, a sagittis orci varius.
+                    Phasellus sollicitudin tellus
+                    vel nulla condimentum, eu cursus diam vulputate
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mattis orci ex, quis aliquam orci
+                    aliquet ac. Mauris mi nunc, euismod id nisl nec, elementum condimentum sem. Suspendisse potenti.
+                    Suspendisse vulputate, justo in vestibulum pretium, orci tortor dapibus sapien, luctus dapibus justo
+                    ex id turpis. Nulla lobortis justo ac odio bibendum, suscipit pulvinar nisi porta. Etiam euismod
+                    nisl nunc, eu ornare lectus bibendum ac. Class aptent taciti sociosqu ad litora torquent per conubia
+                    nostra, per inceptos himenaeos. Maecenas rutrum tellus risus, bibendum molestie ex fringilla sed.
+                    Cras at ultrices mi, nec venenatis ligula. Nam sed congue erat. Duis dignissim at metus sit amet
+                    laoreet. Curabitur sagittis dolor a dui congue, at consequat neque viverra. Maecenas porttitor risus
+                    ut elementum elementum. Nunc rutrum cursus nisl, vitae varius urna consectetur elementum. Integer
+                    vestibulum dui eget magna consectetur, a sagittis orci varius. Phasellus sollicitudin
+                    tellus vel nulla condimentum, eu cursus diam vulputate
             </p>
-            <p class="w3-large">Now,creating and having hands-on experience , has been fascinating.
-                I want to establish my own contract business ,remotely with a team of programmers, helping others to
-                create their own web
-                designs
-                or business apps. I would
-                like to see myself in the future creating and publishing the work I have done for other people and
-                businesses.</p>
+            <p class="w3-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mattis orci ex, quis aliquam orci aliquet ac. Mauris mi nunc, euismod id nisl nec, elementum condimentum sem. Suspendisse potenti. Suspendisse vulputate, justo in vestibulum pretium, orci tortor dapibus sapien, luctus dapibus justo ex id turpis. Nulla lobortis justo ac odio bibendum, suscipit pulvinar nisi porta. Etiam euismod nisl nunc, eu ornare lectus bibendum ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas rutrum tellus risus, bibendum molestie ex fringilla sed. Cras at ultrices mi, nec venenatis ligula. Nam sed congue erat. Duis dignissim at metus sit amet laoreet. Curabitur sagittis dolor a dui congue, at consequat neque viverra. Maecenas porttitor risus ut elementum elementum. Nunc rutrum cursus nisl, vitae varius urna consectetur elementum. Integer vestibulum dui eget magna consectetur, a sagittis orci varius. Phasellus
+                sollicitudin tellus vel nulla condimentum, eu cursus diam vulputate</p>
         </section>
 
         <section>
             Project 1
-            <p class="w3-large w3-text-blue-grey w3-text-medium "> I created a quiz app with one of my classmates. We
-                came up with something that we both enjoy watching
-                , I believe I was more of a fan, we came up with a fan quiz app. We started this quiz app
-                with the flex-box method,using javascript, html, css, and json.
+            <p class="w3-large w3-text-blue-grey w3-text-medium ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean mattis orci ex, quis aliquam orci aliquet ac. Mauris mi nunc, euismod id nisl nec, elementum condimentum sem. Suspendisse potenti. Suspendisse vulputate, justo in vestibulum pretium, orci tortor dapibus sapien, luctus dapibus justo ex id turpis. Nulla lobortis justo ac odio bibendum, suscipit pulvinar nisi porta. Etiam euismod nisl nunc, eu ornare lectus bibendum ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas rutrum tellus risus, bibendum molestie ex fringilla sed. Cras at ultrices mi, nec venenatis ligula. Nam sed congue erat. Duis dignissim at metus sit amet laoreet. Curabitur sagittis dolor a dui congue, at consequat neque viverra. Maecenas porttitor risus ut elementum elementum. Nunc rutrum cursus nisl, vitae varius urna consectetur elementum. Integer vestibulum dui eget magna consectetur, a sagittis orci varius. Phasellus 
+                sollicitudin tellus vel nulla condimentum, eu cursus diam vulputate
         </section>
 
         <section>
             Project 2
-            <p class="w3-large w3-text-grey w3-text-medium">My Bookmark app has been one of my most
-                challenging projects. I started my bookmark app with a box mobile design and in use
-                javascript, api, jquery, html5, css3, and json. I am continuing to work on this project
-                for outstanding results.
+            <p class="w3-large w3-text-grey w3-text-medium">Lorem ipsum dolor sit amet,
+                 consectetur adipiscing elit. Aenean mattis orci ex, quis aliquam orci aliquet ac. Mauris mi nunc, euismod id nisl nec, elementum condimentum sem. Suspendisse potenti. Suspendisse vulputate, justo in vestibulum pretium, orci tortor dapibus sapien, luctus dapibus justo ex id turpis. Nulla lobortis justo ac odio bibendum, suscipit pulvinar nisi porta. Etiam euismod nisl nunc, eu ornare lectus bibendum ac. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas rutrum tellus risus, bibendum molestie ex fringilla sed. Cras at ultrices mi, nec venenatis ligula. Nam sed congue erat. Duis dignissim at metus sit amet laoreet. Curabitur sagittis dolor a dui congue, at consequat neque viverra. Maecenas porttitor risus ut elementum elementum. Nunc rutrum cursus nisl, vitae varius urna consectetur elementum. Integer vestibulum dui eget magna consectetur, a sagittis orci varius. Phasellus sollicitudin 
+                tellus vel nulla condimentum, eu cursus diam vulputate
         </section>
 
         <section>
@@ -65,7 +91,7 @@
         <br>
         <h2>Contact Me</h2>
         <p>Penelope Owens</p>
-        <a href="mailto:owenspennie9@live.com">owenspennie9@live.com</a></span>
+        <a href="mailto:owenspennie9@live.com">oLorem ipsum@ Aenquis.com</a></span>
         <span>281-384-7199<span>
 </body>
 
